--- a/style/prom.scss
+++ b/style/prom.scss
@@ -1,6 +1,6 @@
 #prom {
   p {
-    margin-top: 20px;
+    margin-top: 20px !important;
     display: none;
     &:first-child {
       margin-top: 50px;
